--- a/server/package.json
+++ b/server/package.json
@@ -15,14 +15,25 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/node": "^15.0.2",
+    "@types/node": "^15.3.0",
+    "@types/passport": "^1.0.6",
+    "@types/passport-google-oauth20": "^2.0.7",
+    "@types/superagent": "^4.1.11",
+    "all-the-german-words": "^1.1.0",
+    "an-array-of-english-words": "^2.0.0",
+    "an-array-of-french-words": "^2.0.0",
+    "an-array-of-spanish-words": "^2.0.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.14.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
+    "server": "^1.0.33",
+    "superagent": "^6.1.0",
     "typeorm": "0.2.29"
   },
   "devDependencies": {
