--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -45,6 +45,10 @@ android {
 
 dependencies {
 
+    implementation "com.google.accompanist:accompanist-pager:0.10.0"
+
+    // If using indicators, also depend on
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
