--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.3.0",
+    "@types/nodemailer": "^6.4.2",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.7",
     "@types/superagent": "^4.1.11",
@@ -28,6 +29,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.14.1",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
