--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+
+    //Data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta02"
+
+
     // If using indicators, also depend on
     implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -67,6 +72,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha01"
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
