--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+
+
 android {
     compileSdk 30
     buildToolsVersion "30.0.3"
@@ -63,7 +65,15 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
 
 
-    // If using indicators, also depend on
+    def room_version = "2.2.4"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
