--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         compose_version = '1.0.0-rc01'
+        kotlin_version = '1.5.10'
     }
     repositories {
         google()
@@ -9,8 +10,9 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0-beta05"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
