Switch to use proto Data store

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -3,9 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-
+    id "com.google.protobuf" version "0.8.12"
 }
-
 
 
 android {
@@ -48,6 +47,25 @@ android {
     }
 }
 
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.17.3"
+    }
+
+    // Generates the java Protobuf-lite code for the Protobufs in this project. See
+    // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
+    // for more information.
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option 'lite'
+                }
+            }
+        }
+    }
+}
+
 dependencies {
 
     implementation "com.google.accompanist:accompanist-pager:0.10.0"
@@ -64,8 +82,8 @@ dependencies {
 
     //Data store
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
-
-
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation  "com.google.protobuf:protobuf-javalite:3.10.0"
 
 
     def room_version = "2.2.4"
