--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -86,6 +86,10 @@ dependencies {
     implementation  "com.google.protobuf:protobuf-javalite:3.10.0"
 
 
+    //Glide
+    implementation "com.github.skydoves:landscapist-glide:1.3.6"
+
+
     def room_version = "2.2.4"
 
     implementation "androidx.room:room-runtime:$room_version"
