--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@postlight/mercury-parser": "^2.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
@@ -34,6 +35,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
+    "scrape-it": "^5.3.2",
     "server": "^1.0.33",
     "superagent": "^6.1.0",
     "typeorm": "0.2.29"
