Add html parser library to display the article content

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-pager:0.10.0"
 
+    //Markdown library
+    implementation 'com.github.jeziellago:compose-markdown:0.2.6'
+
     def ktor_version = "1.6.0"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-android:$ktor_version"
