--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -102,6 +102,9 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    //Constraint Layout
+    implementation("androidx.constraintlayout:constraintlayout:2.1.1")
+
     implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
