--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -105,6 +105,10 @@ dependencies {
     //Constraint Layout
     implementation("androidx.constraintlayout:constraintlayout:2.1.1")
 
+    //ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
+    implementation 'com.github.PierfrancescoSoffritti.android-youtube-player:core:10.0.5'
+
     implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
