--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -109,6 +109,12 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
     implementation 'com.github.PierfrancescoSoffritti.android-youtube-player:core:10.0.5'
 
+    //Coil
+    implementation("io.coil-kt:coil-compose:1.4.0")
+    implementation("io.coil-kt:coil-gif:1.4.0")
+
+
+
     implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
