--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql": "^2.14.1",
     "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
