--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 
 android {
-    compileSdk 30
+    compileSdk 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -119,6 +119,7 @@ dependencies {
     implementation "com.android.billingclient:billing:$billing_version"
 
 
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
 
     implementation "com.google.accompanist:accompanist-pager-indicators:0.10.0"
     implementation 'androidx.core:core-ktx:1.6.0'
